syntax = "proto3";
package attestation.v1;

import "amino/amino.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/crypto-org-chain/cronos/x/attestation/types";


// BlockAttestationData contains the data for a single block attestation
// Includes all data needed for full block reconstruction (DA layer)
// CONTRACT: Has to be consistent with attestation layer
message BlockAttestationData {
  // Block height (for indexing, also in block_header.Header.Height)
  uint64 block_height = 1;

  bytes app_hash = 2;
}

// BlockAttestationRecord stores the complete attestation record
message BlockAttestationRecord {
  // Attestation ID (auto-incremented)
  uint64 attestation_id = 1;

  // Source chain ID
  string chain_id = 2;

  // Block height
  uint64 block_height = 3;

  // Rollup address who submitted this attestation
  string rollup_address = 4;

  // Attestation data (includes block_height)
  BlockAttestationData data = 5 [(gogoproto.nullable) = false];

  // Finality timestamp (0 if not finalized)
  int64 finalized_at = 6;
}

message FinalityStatus {
  // Block height
  uint64 block_height = 1;

  // Finality timestamp (0 if not finalized)
  int64 finalized_at = 2;

  // Finality proof (validator signatures, etc.)
  bytes finality_proof = 3;
}
