syntax = "proto3";
package cronos.icactl.v1;

import "gogoproto/gogo.proto";
import "icactl/v1/params.proto";

option go_package = "github.com/crypto-org-chain/cronos/x/icactl/types";

// GenesisState defines the icactl module's genesis state.
message GenesisState {
  // params defines the genesis parameters
  Params params = 1 [(gogoproto.nullable) = false];
}
